--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,11 @@
 doctype html
 html
   head
-    title express-upload-progress
+    title Desafio Samba Tech
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
     script(src='/javascripts/jquery-1.9.1.min.js')
-    script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/script.js')
+    script(src='/javascripts/video.js')
